# gfx-basic

./: Cargo.toml  README.md
examples/: cascade_p.rs
examples/triangle/: main.rs
gfx-math/: Cargo.toml
gfx-math/src/: euler.rs  lib.rs  macros.rs  number.rs  quaternion.rs  vector.rs
gfx-math/src/angle/: deg.rs  macros.rs  mod.rs  rad.rs
gfx-math/src/circle/: macros.rs  mod.rs
gfx-math/src/extent/: macros.rs  mod.rs
gfx-math/src/line/: macros.rs  mod.rs
gfx-math/src/matrix/: macros.rs  mod.rs
gfx-math/src/point/: macros.rs  mod.rs  point1.rs  point2.rs  point3.rs  pt2.rs  pt3.rs
gfx-math/src/vector/: macros.rs  mod.rs  vec2.rs  vec3.rs  vec4.rs  vector1.rs  vector2.rs  vector3.rs  vector4.rs
gfx-window/: Cargo.toml
src/: engine.rs  error.rs  event.rs  lib.rs  prelude.rs
